[package]
name = "touchbox"
version = "0.1.0"
edition = "2021"

[target.thumbv6m-none-eabi]
runner = "probe-run --chip RP2040"

[dependencies]
panic-halt = "0.2.0"
embedded-hal = { version = "0.2.7", features = ["unproven"] }
cortex-m = "0.7"
cortex-m-rt = "0.7"
embedded-graphics-core = "0.4.0"
display-interface = "0.4.1"
display-interface-spi = "0.4.1"
fugit = "0.3.0"
rp-pico = "0.7.0"
gc9a01a = "0.1.1"
embedded-graphics = "0.8.0"
cst816s = "0.1.4"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[[bin]]
name = "touchbox"
path = "src/main.rs"
